--- a/hugo.yaml
+++ b/hugo.yaml
@@ -104,7 +104,7 @@ params:
     # hiddenInSingle: false # hide on single page
 
   editPost:
-    URL: "https://github.com/nozsh/blog/content"
+    URL: "https://github.com/nozsh/blog/tree/main/content"
     Text: "Предложить изменения" # edit text
     appendFilePath: true # to append file path to Edit link
 
