--- a/hugo.yaml
+++ b/hugo.yaml
@@ -33,6 +33,7 @@ params:
   ShowCodeCopyButtons: true
   ShowWordCount: true
   ShowRssButtonInSectionTermList: true
+  CanonicalLinkText: "Источник:"
   UseHugoToc: true
   disableSpecial1stPost: true
   disableScrollToTop: false
