--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,7 +1,7 @@
 baseURL: https://nozsh.su/blog/
 languageCode: ru
 defaultContentLanguage: ru
-title: blog
+title: "nozsh"
 paginate: 15
 theme: ["PaperMod"]
 
