--- a/hugo.yaml
+++ b/hugo.yaml
@@ -29,14 +29,14 @@ params:
   ShowReadingTime: true
   ShowShareButtons: false
   ShowPostNavLinks: true
-  ShowBreadCrumbs: true
+  ShowBreadCrumbs: false
   ShowCodeCopyButtons: true
   ShowWordCount: true
   ShowRssButtonInSectionTermList: true
   # CanonicalLinkText: "Источник:"
   # ShowAllPagesInArchive: true
   ShowPageNums: true
-  disableSpecial1stPost: true
+  disableSpecial1stPost: false
   disableScrollToTop: false
   comments: true
   # images: ["images/papermod-cover.png"]
@@ -166,6 +166,8 @@ menu:
 
 # Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
 pygmentsUseClasses: true
+
+enableEmoji: false
 
 ## MARKDOWN SETTINGS ##
 markup:
