--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://nozsh.su/blog/
+baseURL: https://nozsh.com/blog/
 languageCode: ru
 defaultContentLanguage: ru
 defaultContentLanguageInSubdir: false
