--- a/hugo.yaml
+++ b/hugo.yaml
@@ -9,7 +9,7 @@ theme: ["PaperMod"]
 
 pagination:
   disableAliases: false
-  pagerSize: 6
+  pagerSize: 12
 
 enableRobotsTXT: false
 buildDrafts: false
@@ -54,6 +54,7 @@ params:
   disableAnchoredHeadings: false
   TocSide: "right"
   EnableImageZoom: true
+  ListMasonry: true
 
   assets:
     disableHLJS: true # to disable highlight.js
