--- a/hugo.yaml
+++ b/hugo.yaml
@@ -155,7 +155,8 @@ menu:
       url: /tags/
       weight: 300
     - identifier: nozshub
-      name: 🌀 hub
+      # name: 🌀 hub
+      name: cd ~/
       url: https://nozsh.com/
       weight: 340
     # - identifier: Knowledge Base
