--- a/hugo.yaml
+++ b/hugo.yaml
@@ -55,7 +55,7 @@ params:
   TocSide: "right"
   EnableImageZoom: true
   ListMasonry: true
-  xmas: true
+  xmas: false
 
   assets:
     disableHLJS: true # to disable highlight.js
